[gd_scene load_steps=29 format=3 uid="uid://ceeclcddk3clm"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_shxfc"]
[ext_resource type="Texture2D" uid="uid://c06fbfai0rya3" path="res://Assets/characters/slime.png" id="2_ww521"]
[ext_resource type="PackedScene" uid="uid://cgyiql6h4xmd7" path="res://Scenes/AttackComponent.tscn" id="3_fqw2f"]
[ext_resource type="PackedScene" uid="uid://c4em773mjfi4y" path="res://Scenes/HpComponent.tscn" id="4_t6fat"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6djhn"]
atlas = ExtResource("2_ww521")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mwna"]
atlas = ExtResource("2_ww521")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jouk1"]
atlas = ExtResource("2_ww521")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j8qv"]
atlas = ExtResource("2_ww521")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cua7b"]
atlas = ExtResource("2_ww521")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmhpg"]
atlas = ExtResource("2_ww521")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo2fn"]
atlas = ExtResource("2_ww521")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jljxa"]
atlas = ExtResource("2_ww521")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp054"]
atlas = ExtResource("2_ww521")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykt6w"]
atlas = ExtResource("2_ww521")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6k8i"]
atlas = ExtResource("2_ww521")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x332"]
atlas = ExtResource("2_ww521")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isws4"]
atlas = ExtResource("2_ww521")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_317eo"]
atlas = ExtResource("2_ww521")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdcgs"]
atlas = ExtResource("2_ww521")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv281"]
atlas = ExtResource("2_ww521")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg123"]
atlas = ExtResource("2_ww521")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xw4r"]
atlas = ExtResource("2_ww521")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txrxt"]
atlas = ExtResource("2_ww521")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkson"]
atlas = ExtResource("2_ww521")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jwoh"]
atlas = ExtResource("2_ww521")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ttgc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6djhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mwna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jouk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j8qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cua7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmhpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo2fn")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jljxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp054")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykt6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6k8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x332")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isws4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_317eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdcgs")
}],
"loop": false,
"name": &"take_hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv281")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg123")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xw4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txrxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkson")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jwoh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_106vm"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4au1"]
size = Vector2(45, 45)

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_shxfc")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ttgc1")
animation = &"walk"

[node name="bodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_106vm")

[node name="AttackComponent" parent="." instance=ExtResource("3_fqw2f")]
position = Vector2(0, 1.19209e-07)
scale = Vector2(0.525015, 0.474242)
collision_mask = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="agroCollision" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.77772, 1.77772)
shape = SubResource("RectangleShape2D_t4au1")

[node name="HpComponent" parent="." instance=ExtResource("4_t6fat")]
maxHp = 3

[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="char_dead" from="HpComponent" to="." method="_on_hp_component_char_dead"]
[connection signal="damage_taken" from="HpComponent" to="." method="_on_hp_component_damage_taken"]
